--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,8 @@
 fastapi==0.104.1
 mangum==0.17.0
-pandas>=2.2.0
-pandas-ta==0.4.67b0
+pandas==2.0.3
+ta==0.11.0
 requests==2.31.0
 pydantic==2.5.0
 aiohttp==3.9.1
+numpy==1.24.3
